buck-out/log/2022-03-06_08h21m30s_buildcommand_e284c3e2-8c06-4db2-8665-ad35046c56e5/simple_console.log
PARSING BUCK FILES: FINISHED IN 1.1s
CREATING ACTION GRAPH: FINISHED IN 0.1s
src/canvas.cpp:25:3: error: use of undeclared identifier 'path'
  path = bmp_path + fileName;
  ^
src/canvas.cpp:32:35: error: type 'CanvasPixel' does not provide a subscript operator
      CanvasPixel pixel = _data[x][y];
                          ~~~~~~~~^~
src/canvas.cpp:33:34: error: no member named 'r' in 'CanvasPixel'
      img.set_pixel (x, y, pixel.r, pixel.g, pixel.b);
                           ~~~~~ ^
src/canvas.cpp:33:43: error: no member named 'g' in 'CanvasPixel'
      img.set_pixel (x, y, pixel.r, pixel.g, pixel.b);
                                    ~~~~~ ^
src/canvas.cpp:33:52: error: no member named 'b' in 'CanvasPixel'
      img.set_pixel (x, y, pixel.r, pixel.g, pixel.b);
                                             ~~~~~ ^
src/canvas.cpp:47:13: error: type 'CanvasPixel' does not provide a subscript operator
  ((* _data)[GetIndex(x, y)])._r = r;
   ~~~~~~~~~^~~~~~~~~~~~~~~
src/canvas.cpp:48:13: error: type 'CanvasPixel' does not provide a subscript operator
  ((* _data)[GetIndex(x, y)])._g = g;
   ~~~~~~~~~^~~~~~~~~~~~~~~
src/canvas.cpp:49:13: error: type 'CanvasPixel' does not provide a subscript operator
  ((* _data)[GetIndex(x, y)])._b = b;
   ~~~~~~~~~^~~~~~~~~~~~~~~
8 errors generated.
DOWNLOADED 0 ARTIFACTS, 0.00 BYTES, 100.0% CACHE MISS
BUILDING: FINISHED IN 4.9s 10/9 JOBS, 3 UPDATED

Top slow rules
    //:cg: 3.8s
    //lib/libbmp:libbmp: 0.0s
    //lib/boost_1_78_0:boost: 0.0s
BUILD FAILED
Command failed with exit code 1.

command: [/usr/bin/clang++, @/Users/barjimal/Code/cpp/cg/buck-out/bin/cg#compile-canvas.cpp.o90b2484d,default/ppandcompile.argsfile]

stderr: src/canvas.cpp:25:3: error: use of undeclared identifier 'path'
  path = bmp_path + fileName;
  ^
src/canvas.cpp:32:35: error: type 'CanvasPixel' does not provide a subscript operator
      CanvasPixel pixel = _data[x][y];
                          ~~~~~~~~^~
src/canvas.cpp:33:34: error: no member named 'r' in 'CanvasPixel'
      img.set_pixel (x, y, pixel.r, pixel.g, pixel.b);
                           ~~~~~ ^
src/canvas.cpp:33:43: error: no member named 'g' in 'CanvasPixel'
      img.set_pixel (x, y, pixel.r, pixel.g, pixel.b);
                                    ~~~~~ ^
src/canvas.cpp:33:52: error: no member named 'b' in 'CanvasPixel'
      img.set_pixel (x, y, pixel.r, pixel.g, pixel.b);
                                             ~~~~~ ^
src/canvas.cpp:47:13: error: type 'CanvasPixel' does not provide a subscript operator
  ((* _data)[GetIndex(x, y)])._r = r;
   ~~~~~~~~~^~~~~~~~~~~~~~~
src/canvas.cpp:48:13: error: type 'CanvasPixel' does not provide a subscript operator
  ((* _data)[GetIndex(x, y)])._g = g;
   ~~~~~~~~~^~~~~~~~~~~~~~~
src/canvas.cpp:49:13: error: type 'CanvasPixel' does not provide a subscript operator
  ((* _data)[GetIndex(x, y)])._b = b;
   ~~~~~~~~~^~~~~~~~~~~~~~~
8 errors generated.
    When running <c++ preprocess_and_compile>.
    When building rule //:cg#compile-canvas.cpp.o90b2484d,default.
